(Fix): Increases the maps z-index on fullscreen
Problem
The mobile "Menu" button was being displayed on top of the map
on mobile when the map was in full screen.

Solution
Add a z-index to the map when it has the class .leaflet-fullscreen-on
such that it is higher than the z-index of the menu button.

Closes #66.

--- a/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
+++ b/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
@@ -109,6 +109,10 @@ ul {
   max-height: 50vh;
 }
 
+#map.leaflet-fullscreen-on {
+  z-index: 999999999;
+}
+
 blockquote {
   margin: 1rem 0;
   padding: 0.5rem;
